[gd_scene load_steps=2 format=3 uid="uid://bp27sxo36erpf"]

[ext_resource type="Script" uid="uid://bhpi6itxo1du7" path="res://scripts/quest_hud.gd" id="1_8emv4"]

[node name="QuestHUD" type="CanvasLayer"]
script = ExtResource("1_8emv4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_right = 60.0
offset_bottom = 40.0

[node name="QuestTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="GoalsBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
